--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.6.0",
+    "react-query": "^3.39.3",
     "reactotron-react-native": "5.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.6.3"
