--- a/package.json
+++ b/package.json
@@ -14,44 +14,44 @@
     "@expo-google-fonts/poppins": "^0.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.4.5",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "expo": "~47.0.9",
+    "expo": "^48.0.0",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "^11.0.1",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "jest": "^26.6.3",
-    "jest-expo": "^47.0.1",
-    "lottie-react-native": "^5.1.4",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.0",
+    "lottie-react-native": "5.1.4",
     "polished": "^4.2.2",
     "prettier": "^2.8.1",
-    "react": "18.1.0",
+    "react": "18.2.0",
     "react-hook-form": "^7.41.1",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-modalize": "^2.1.1",
     "react-native-progress": "^5.0.0",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.6.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-query": "^3.39.3",
     "reactotron-react-native": "5.0.0",
     "styled-components": "^5.3.6",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.3.3",
     "@testing-library/react-native": "^11.5.0",
     "@types/jest": "^29.2.5",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
     "@types/styled-components-react-native": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
